--- a/public/css/app.scss
+++ b/public/css/app.scss
@@ -509,7 +509,7 @@ mark,
   margin: 2rem 0 2.5rem 0;
 }
 
-.my-navbar {
+.my-navbar, footer{
   align-items: center;
   background:#555;
   display: flex;
